syntax = "proto3";

import "google/protobuf/empty.proto";

package qcdn.file;

service QcdnFileQueries {
	rpc GetDirs(google.protobuf.Empty) returns (GetDirsResponse);
	rpc GetDir(GetDirRequest) returns (GetDirResponse);
	rpc GetFiles(GetFilesRequest) returns (GetFilesResponse);
	rpc GetFile(GetFileRequest) returns (GetFileResponse);
	rpc GetFileVersions(GetFileVersionsRequest) returns (GetFileVersionsResponse);
	rpc GetFileVersion(GetFileVersionRequest) returns (GetFileVersionResponse);
	rpc Download(DownloadRequest) returns (stream FilePart);
}

service QcdnFileUpdates {
	rpc Upload(stream UploadRequest) returns (UploadResponse);
	rpc TagVersion(TagVersionRequest) returns (google.protobuf.Empty);
	rpc DeleteFileVersion(DeleteFileVersionRequest) returns (google.protobuf.Empty);
}

message GetDirRequest {
	int64 id = 1;
}

message GetDirResponse {
	int64 id = 1;
	string name = 2;
}

message GetDirsResponse {
	repeated GetDirResponse items = 1;
}

message GetFilesRequest {
	int64 dir_id = 1;
}

message GetFileRequest {
	int64 id = 1;
}

message GetFileResponse {
	int64 id = 1;
	int64 dir_id = 2;
	string name = 3;
	string media_type = 4;
}

message GetFilesResponse {
	repeated GetFileResponse items = 1;
}

message GetFileVersionsRequest {
	int64 file_id = 1;
}

message GetFileVersionRequest {
	int64 id = 1;
}

message GetFileVersionResponse {
	int64 id = 1;
	int64 file_id = 2;
	string name = 3;
	int64 size = 4;
	repeated string tags = 5;
	bool is_deleted = 6;
}

message GetFileVersionsResponse {
	repeated GetFileVersionResponse items = 1;
}

message FilePart {
	bytes bytes = 1;
}

message UploadMeta {
	string dir = 1;
	string name = 2;
	string media_type = 3;
	string version = 4;
	int64 size = 5;
}

message UploadRequest {
	oneof request {
		UploadMeta meta = 1;
		FilePart part = 2;
	}
}

message UploadResponse {
	int64 dir_id = 1;
	int64 file_id = 2;
	int64 file_version_id = 3;
}

message DownloadRequest {
	int64 file_version_id = 1;
}

message TagVersionRequest {
	int64 file_version_id = 1;
	string tag = 2;
}

message DeleteFileVersionRequest {
	int64 id = 1;
}
